--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,55 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
+    <title>Mynuddin SK</title>
+    <link rel="stylesheet" href="styles.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand">My Website</a>
         </nav>
     </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Welcome to my portfolio! I'm a passionate web developer with experience in HTML, CSS, and JavaScript.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
+    <div class="container-fluid">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="col-6 nav-item" role="presentation">
+                <button class="col-12 nav-link fw-bold active" id="pills-about-tab" data-bs-toggle="pill" data-bs-target="#pills-about" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+                    About me
+                </button>
+            </li>
+            <li class="col-6 nav-item" role="presentation">
+                <button class="col-12 nav-link fw-bold" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
+                    Write to me
+                </button>
+            </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="jumbotron">
+                            <h1>Welcome to my page</h1>
+                            <button onclick="sendEmail()"> Test</button>
+                            <h1>Send Email</h1>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+                <div class="container mt-5">
+                    <div class="row">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of project 2.</p>
-        </div>
-    </section>
+    </div>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <form action="#">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br>
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" required></textarea><br>
-            <button type="submit">Send</button>
-        </form>
-    </section>
 
-    <footer>
-        <p>&copy; 2024 My Portfolio</p>
+
+    <footer class="text-white text-center py-3 mt-4">
+        &copy; 2024 My Website
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
