--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,63 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
     <title>Mynuddin SK</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"
+        integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand">My Website</a>
+        <nav class="navbar navbar-expand-lg bg-primary fw-bold">
+            <a class="navbar-brand  m-3 ">Shaik Khaja Mynuddin</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
-    <div class="container-fluid">
+    <div class="container-fluid body" style="min-height: 600px;">
+        <div class="row">
+            <div class="col-12">
+                <div>
+                    <h2>Welcome to my page</h2>
+                </div>
+            </div>
+        </div>
+        <div>
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
             <li class="col-6 nav-item" role="presentation">
-                <button class="col-12 nav-link fw-bold active" id="pills-about-tab" data-bs-toggle="pill" data-bs-target="#pills-about" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+                <button class="col-12 nav-link fw-bold active" id="pills-about-tab" data-bs-toggle="pill"
+                    data-bs-target="#pills-about" type="button" role="tab" aria-controls="pills-home"
+                    aria-selected="true">
                     About me
                 </button>
             </li>
             <li class="col-6 nav-item" role="presentation">
-                <button class="col-12 nav-link fw-bold" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
+                <button class="col-12 nav-link fw-bold" id="pills-contact-tab" data-bs-toggle="pill"
+                    data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
+                    aria-selected="false">
                     Write to me
                 </button>
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
+            <div class="tab-pane fade show active" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">                
                 <div class="row">
-                    <div class="col-12">
-                        <div class="jumbotron">
-                            <h1>Welcome to my page</h1>
-                            <button onclick="sendEmail()"> Test</button>
-                            <h1>Send Email</h1>
-                            
-                        </div>
-                    </div>
+                    <div class="col-6 pl-2">                        
+                        <ul class="list-group mt-3">
+                            <li class="list-group-item">
+                                <span class=""><strong>Name:</strong></span>
+                                <span class="">Shaik Khaja Mynuddin</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Age:</strong> </span>
+                                <span class="">24 Years</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Location:</strong></span>
+                                <span class="">Bangalore, India</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Occupation:</strong></span> 
+                                <span class="">Web Developer</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Hobbies:</strong> </span>
+                                <span class="">Coding, Reading, Music</span>
+                            </li>
+                        </ul>
+                    </div> 
+                    <div class="col-6 pl-2">                        
+                        <ul class="list-group mt-3">
+                            <li class="list-group-item">
+                                <span class=""><strong>Gender:</strong></span>
+                                <span class="">Male</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Company:</strong> </span>
+                                <span class="">Cognizant</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Education:</strong></span>
+                                <span class="">Bachelor of Technology</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Branch:</strong></span> 
+                                <span class="">Electrical Engineering</span>
+                            </li>
+                            <li class="list-group-item">
+                                <span class=""><strong>Interests:</strong> </span>
+                                <span class="">Chess, Cricket, Cinema</span>
+                            </li>
+                        </ul>
+                    </div>  
                 </div>
             </div>
             <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-                <div class="container mt-5">
-                    <div class="row">
+                <div class="container">
+                    <div class="row pt-3 pb-3 container shadow-lg">
+                        <h5>
+                            Please drop a note!
+                        </h5>
+                        <form class="col-12">
+                            <div class="form-group">
+                                <label for="email" class="px-2 pb-1">Your email <span class="text-danger">*</span></label>
+                                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message" class="px-2 pb-1">Message</label>
+                                <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="suggestion" class="px-2 pb-1">Any Suggestion?</label>
+                                <textarea class="form-control" id="suggestion" rows="3" placeholder="Enter your suggestion"></textarea>
+                            </div>
+                            <div class="text-center pt-2">
+                            <button type="submit" class="btn btn-outline-primary btn-block" style="width: 50%;">Send</button>
+                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
+        </div>
+        <script src="script.js"></script>
+    </div>
+        <div class="container-fluid mt-5">
+            <h3>Projects</h1>
+                <div class="row mt-4">
+                    <div class="col-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="project1.jpg" class="card-img-top" alt="Project 1">
+                                <h5 class="card-title">E-Commerce Application using Asp.Net Core MVC</h5>
+                                <p class="card-text">Description of Project 1.</p>
+                                <div class="row">
+                                    <a href="#" class="col-6 btn btn-outline-primary">GitHub</a>
+                                    <a href="#" class="col-6 btn btn-outline-primary">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">College Management Application using Angular and Asp.Net Core
+                                    WebApi</h5>
+                                <img src="project2.jpg" class="card-img-top" alt="Project 2">
+                                <p class="card-text">Description of Project 2.</p>
+                                <div class="row">
+                                    <a href="#" class="col-6 btn btn-outline-primary">GitHub</a>
+                                    <a href="#" class="col-6 btn btn-outline-primary">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
         </div>
     </div>
 
 
 
-    <footer class="text-white text-center py-3 mt-4">
-        &copy; 2024 My Website
+    <footer class="text-center py-3 mt-4">
+        &copy; 2024 My Website <i class="fas fa-heart"></i>
+
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
