--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,15 +8,15 @@
     <title>Mynuddin SK</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"
-        integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
+          href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"
+          integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -53,135 +53,158 @@
             </div>
         </div>
         <div>
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-            <li class="col-6 nav-item" role="presentation">
-                <button class="col-12 nav-link fw-bold active" id="pills-about-tab" data-bs-toggle="pill"
-                    data-bs-target="#pills-about" type="button" role="tab" aria-controls="pills-home"
-                    aria-selected="true">
-                    About me
-                </button>
-            </li>
-            <li class="col-6 nav-item" role="presentation">
-                <button class="col-12 nav-link fw-bold" id="pills-contact-tab" data-bs-toggle="pill"
-                    data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
-                    aria-selected="false">
-                    Write to me
-                </button>
-            </li>
-        </ul>
-        <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">                
-                <div class="row">
-                    <div class="col-6 pl-2">                        
-                        <ul class="list-group mt-3">
-                            <li class="list-group-item">
-                                <span class=""><strong>Name:</strong></span>
-                                <span class="">Shaik Khaja Mynuddin</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Age:</strong> </span>
-                                <span class="">24 Years</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Location:</strong></span>
-                                <span class="">Bangalore, India</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Occupation:</strong></span> 
-                                <span class="">Web Developer</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Hobbies:</strong> </span>
-                                <span class="">Coding, Reading, Music</span>
-                            </li>
-                        </ul>
-                    </div> 
-                    <div class="col-6 pl-2">                        
-                        <ul class="list-group mt-3">
-                            <li class="list-group-item">
-                                <span class=""><strong>Gender:</strong></span>
-                                <span class="">Male</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Company:</strong> </span>
-                                <span class="">Cognizant</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Education:</strong></span>
-                                <span class="">Bachelor of Technology</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Branch:</strong></span> 
-                                <span class="">Electrical Engineering</span>
-                            </li>
-                            <li class="list-group-item">
-                                <span class=""><strong>Interests:</strong> </span>
-                                <span class="">Chess, Cricket, Cinema</span>
-                            </li>
-                        </ul>
-                    </div>  
-                </div>
-            </div>
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-                <div class="container">
-                    <div class="row pt-3 pb-3 container shadow-lg">
-                        <h5>
-                            Please drop a note!
-                        </h5>
-                        <form class="col-12">
-                            <div class="form-group">
-                                <label for="email" class="px-2 pb-1">Your email <span class="text-danger">*</span></label>
-                                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="message" class="px-2 pb-1">Message</label>
-                                <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label for="suggestion" class="px-2 pb-1">Any Suggestion?</label>
-                                <textarea class="form-control" id="suggestion" rows="3" placeholder="Enter your suggestion"></textarea>
-                            </div>
-                            <div class="text-center pt-2">
-                            <button type="submit" class="btn btn-outline-primary btn-block" style="width: 50%;">Send</button>
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="col-6 nav-item" role="presentation">
+                    <button class="col-12 nav-link fw-bold active" id="pills-about-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-about" type="button" role="tab" aria-controls="pills-home"
+                            aria-selected="true">
+                        About me
+                    </button>
+                </li>
+                <li class="col-6 nav-item" role="presentation">
+                    <button class="col-12 nav-link fw-bold" onclick="openGoogleForm()">
+                        <!--id="pills-contact-tab" data-bs-toggle="pill"
+                        data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
+                        aria-selected="false"-->
+                        Write to me
+                    </button>
+                </li>
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
+                    <div class="row">
+                        <div class="col-6 pl-2">
+                            <ul class="list-group mt-3">
+                                <li class="list-group-item">
+                                    <span class=""><strong>Name:</strong></span>
+                                    <span class="">Shaik Khaja Mynuddin</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Age:</strong> </span>
+                                    <span class="">24 Years</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Location:</strong></span>
+                                    <span class="">Bangalore, India</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Occupation:</strong></span>
+                                    <span class="">Web Developer</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Hobbies:</strong> </span>
+                                    <span class="">Coding, Reading, Music</span>
+                                </li>
+                            </ul>
                         </div>
-                        </form>
+                        <div class="col-6 pl-2">
+                            <ul class="list-group mt-3">
+                                <li class="list-group-item">
+                                    <span class=""><strong>Gender:</strong></span>
+                                    <span class="">Male</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Company:</strong> </span>
+                                    <span class="">Cognizant</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Education:</strong></span>
+                                    <span class="">Bachelor of Technology</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Branch:</strong></span>
+                                    <span class="">Electrical Engineering</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span class=""><strong>Interests:</strong> </span>
+                                    <span class="">Chess, Cricket, Cinema</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+                    <div class="container">
+                        <div class="row pt-3 pb-3 container shadow-lg">
+                            <h5>
+                                Please drop a note!
+                            </h5>
+                            <form class="col-12">
+                                <div class="form-group">
+                                    <label for="email" class="px-2 pb-1">Your email <span class="text-danger">*</span></label>
+                                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message" class="px-2 pb-1">Message</label>
+                                    <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label for="suggestion" class="px-2 pb-1">Any Suggestion?</label>
+                                    <textarea class="form-control" id="suggestion" rows="3" placeholder="Enter your suggestion"></textarea>
+                                </div>
+                                <div class="text-center pt-2">
+                                    <button type="submit" class="btn btn-outline-primary btn-block" style="width: 50%;">Send</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <script src="script.js"></script>
-    </div>
         <div class="container-fluid mt-5">
-            <h3>Projects</h1>
-                <div class="row mt-4">
-                    <div class="col-12 mb-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="project1.jpg" class="card-img-top" alt="Project 1">
+            <h3>Projects</h3>
+            <div class="row mt-4">
+                <div class="col-12 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="project-image">
+                                <div class="row">
+                                    <div class="col-12 p-1">
+                                        <div class="card border-0 p-3 shadow border-top border-5 rounded">
+                                            <img src="paper.png" class="card-img-top" alt="Project 1">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="project-content pt-3">
                                 <h5 class="card-title">E-Commerce Application using Asp.Net Core MVC</h5>
                                 <p class="card-text">Description of Project 1.</p>
                                 <div class="row">
-                                    <a href="#" class="col-6 btn btn-outline-primary">GitHub</a>
-                                    <a href="#" class="col-6 btn btn-outline-primary">Learn More</a>
+                                    <a class="col-6 btn btn-outline-primary">GitHub</a>
+                                    <a class="col-6 btn btn-outline-primary" title="Not yet deployed!">Go to Project</a>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-12 mb-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">College Management Application using Angular and Asp.Net Core
-                                    WebApi</h5>
-                                <img src="project2.jpg" class="card-img-top" alt="Project 2">
-                                <p class="card-text">Description of Project 2.</p>
-                                <div class="row">
-                                    <a href="#" class="col-6 btn btn-outline-primary">GitHub</a>
-                                    <a href="#" class="col-6 btn btn-outline-primary">Learn More</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
+                <div class="col-12 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="project-image">
+                                <div class="row">
+                                    <div class="col-12 p-1">
+                                        <div class="card border-0 p-3 shadow border-top border-5 rounded">
+                                            <img src="paper.png" class="card-img-top" alt="Project 1">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="project-content pt-3">
+                                <h5 class="card-title">
+                                    College Management Application using Angular and Asp.Net Core WebApi
+                                </h5>
+                                <p class="card-text">Description of Project 2.</p>
+                                <div class="row">
+                                    <a class="col-6 btn btn-outline-primary">GitHub</a>
+                                    <a class="col-6 btn btn-outline-primary" title="Not yet deployed!">Go to Project</a>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
