--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,19 +26,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link">Home</a>
+                        <a href="#sectionProjects" class="nav-link">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Projects</a>
+                        <a href="#sectionExperience" class="nav-link">Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Experience</a>
+                        <a href="#sectionEducation" class="nav-link">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">Contact</a>
+                        <a href="#sectionContact" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div id="sectionAbout">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="col-6 nav-item" role="presentation">
                     <button class="col-12 nav-link fw-bold active" id="pills-about-tab" data-bs-toggle="pill"
@@ -64,8 +61,8 @@
                 <li class="col-6 nav-item" role="presentation">
                     <button class="col-12 nav-link fw-bold" onclick="openGoogleForm()">
                         <!--id="pills-contact-tab" data-bs-toggle="pill"
-                        data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
-                        aria-selected="false"-->
+                    data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
+                    aria-selected="false"-->
                         Write to me
                     </button>
                 </li>
@@ -151,69 +148,119 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid mt-5">
-            <h3>Projects</h3>
-            <div class="row mt-4">
-                <div class="col-12 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="project-image">
-                                <div class="row">
-                                    <div class="col-12 p-1">
-                                        <div class="card border-0 p-3 shadow border-top border-5 rounded">
-                                            <img src="paper.png" class="card-img-top" alt="Project 1">
+        <div id="sectionProjects">
+            <div class="container-fluid mt-5">
+                <h2 class="text-center">Projects</h2>
+                <div class="row mt-4">
+                    <div class="col-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="project-image">
+                                    <div class="row">
+                                        <div class="col-12 p-1">
+                                            <div class="card border-0 p-3 shadow border-top border-5 rounded">
+                                                <img src="paper.png" class="card-img-top" alt="Project 1">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="project-content pt-3">
-                                <h5 class="card-title">E-Commerce Application using Asp.Net Core MVC</h5>
-                                <p class="card-text">Description of Project 1.</p>
-                                <div class="row">
-                                    <a class="col-6 btn btn-outline-primary">GitHub</a>
-                                    <a class="col-6 btn btn-outline-primary" title="Not yet deployed!">Go to Project</a>
+                                <div class="project-content pt-3">
+                                    <h5 class="card-title">E-Commerce Application using Asp.Net Core MVC</h5>
+                                    <p class="card-text">Description of Project 1.</p>
+                                    <div class="row">
+                                        <a class="col-6 btn btn-outline-primary">GitHub</a>
+                                        <a class="col-6 btn btn-outline-primary" title="Not yet deployed!">Go to Project</a>
+                                    </div>
                                 </div>
+
                             </div>
-                            
                         </div>
                     </div>
-                </div>
-                <div class="col-12 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="project-image">
-                                <div class="row">
-                                    <div class="col-12 p-1">
-                                        <div class="card border-0 p-3 shadow border-top border-5 rounded">
-                                            <img src="paper.png" class="card-img-top" alt="Project 1">
+                    <div class="col-12 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="project-image">
+                                    <div class="row">
+                                        <div class="col-12 p-1">
+                                            <div class="card border-0 p-3 shadow border-top border-5 rounded">
+                                                <img src="paper.png" class="card-img-top" alt="Project 1">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="project-content pt-3">
-                                <h5 class="card-title">
-                                    College Management Application using Angular and Asp.Net Core WebApi
-                                </h5>
-                                <p class="card-text">Description of Project 2.</p>
-                                <div class="row">
-                                    <a class="col-6 btn btn-outline-primary">GitHub</a>
-                                    <a class="col-6 btn btn-outline-primary" title="Not yet deployed!">Go to Project</a>
+                                <div class="project-content pt-3">
+                                    <h5 class="card-title">
+                                        College Management Application using Angular and Asp.Net Core WebApi
+                                    </h5>
+                                    <p class="card-text">Description of Project 2.</p>
+                                    <div class="row">
+                                        <a class="col-6 btn btn-outline-primary">GitHub</a>
+                                        <a class="col-6 btn btn-outline-primary" title="Not yet deployed!">Go to Project</a>
+                                    </div>
                                 </div>
+
                             </div>
-                            
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
+        <div id="sectionEducation">
+            <div class="container-fluid">
+                <h2 class="text-center">Education</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Bachelor of Technology</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">JNTU Ananthapur University, 2018 - 2021</h6>
+                                <p class="card-text">
+                                Key subjects: Data Structures, Python Programming, SQL.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Diploma (Polytechnic)</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Govt. Polytechnic College, 2015 - 2018</h6>
+                                <p class="card-text">Mathematics, C Programming, and MS Office.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="sectionExperience">
+            <div class="container-fluid">
+                <h2 class="text-center">Job Experience</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Software Developer</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Cognizant Technology Solutions Pvt. Lmtd, Bangalore. 2021 - Present</h6>
+                                <p class="card-text">Working on development and maintaining web applications 
+                                using React, Asp.Net Core, SQL Server.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Software Intern</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Tata Consultancy Services, Bangalore. 2020 - 2021</h6>
+                                <p class="card-text">Assisted in the development of client-side and server-side web applications. Gained experience in working with databases, debugging, and testing software solutions.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
     </div>
-
-
-
     <footer class="text-center py-3 mt-4">
         &copy; 2024 My Website <i class="fas fa-heart"></i>
-
     </footer>
     <script src="script.js"></script>
 </body>
