--- a/Portfolio.html
+++ b/Portfolio.html
@@ -855,7 +855,7 @@
                     <div class="col-12">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Subjecct Matter Expert, Freelancer</h5>
+                                <h5 class="card-title">Subject Matter Expert, Freelancer</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Chegg Inc, Remote. 2018 - 2021</h6>
                                 <p class="card-text">Provided detailed and accurate answers to student queries in Programming and Electrical Engineering, ensuring clarity and comprehension. Fostered a supportive and encouraging learning environment by addressing student questions and concerns with patience and empathy.</p>
                             </div>
