--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
+    <link rel="shortcut icon" href="officialEmoji.png" type="image/x-icon">
     <title>Mynuddin SK</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet">
